# ai-troubleshooter

./: .gitignore  CHANGES_SUMMARY.md  CLAUDE.md  README.md  RISE_TIME_FIX_SUMMARY.md  pyproject.toml  requirements.txt  specs.md
src/: __init__.py  anomaly_detector.py  app.py  config.py  data_simulator.py  diagnostic_agent.py
tests/: __init__.py  test_anomaly_detector.py  test_data_simulator.py  test_diagnostic_agent.py  test_digital_twin_effects.py  test_fault_injection.py  test_performance.py  test_signal_generators.py  test_verification.py  test_visual_validation.py  test_widget_mapping.py
